src/test/resources/expected/test-exception-24.kore.golden
Parse error: ../../../test/resources//test-exception-24.kore:5:19:
  |
5 |   symbol a{}(m) : #n []
  |                   ^
genericIdRawParser: Invalid first character '#'.
